# HelloWorldProject

./: Makefile  Makefile.am  Makefile.in  README.md  config.status  configure  configure.ac  hello  hello.c  main.c  whine.c
.deps/: hello-hello.Po  hello-whine.Po  hello.Po  whine.Po
autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
src/: Makefile  config.h  hello
src/.deps/: hello-hello.Po  hello-whine.Po
